--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".MainActivity">
+    tools:context=".Login">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,15 +16,16 @@
 
 
         <TextView
-            android:id="@+id/textRegis"
+            android:id="@+id/textLog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:text="User Registration"
+            android:text="User Login"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
+
 
 
         <EditText
@@ -45,22 +47,25 @@
             android:textColor="@android:color/black" />
 
         <Button
-            android:id="@+id/buttonSignup"
+            android:id="@+id/buttonSignin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:background="@android:color/holo_orange_dark"
-            android:text="SIGN UP"
+            android:text="SIGN IN"
             android:textColor="@android:color/black"
+            android:textColorLink="@android:color/black"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textViewSignin"
+            android:id="@+id/textViewSignup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Already Registered? Sign in here"
+            android:text="Not have an account? Sign up here"
             android:textAlignment="center"
-            android:textColor="@android:color/holo_green_dark" />
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
